<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            tools:context=".activity.MapsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerMapType"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary_transparent2"
                    android:textColor="@color/darkText"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbTraffic"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary_transparent2"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/traffic"
                    android:textColor="@color/darkText"
                    android:textSize="16sp" />
            </LinearLayout>
        </fragment>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkText"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkText"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBestpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/buttons_orange"
            android:text="@string/best"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_orange"
            android:text="@string/vote"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>
