...
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/add" />

        <ImageView
            android:id="@+id/ivNavigate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/navigation" />

        <ImageView
...
